--- a/Project/style.css
+++ b/Project/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: gray;
 }
+#page {
+    background-color: rgba(255, 255, 255, 0.5);
+}
 header {
     background-color: lightgrey;
     height: 120px;
