--- a/Project/style.css
+++ b/Project/style.css
@@ -34,3 +34,53 @@ nav {
     border: 1px solid #fff;
     background-color: rgba(255, 255, 255, 0.25);
 }
+
+.productCard {
+    position: relative;
+    width: 200px;
+    height: 300px;
+    overflow: hidden;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 10px 15px;
+}
+
+.productCard h4 {
+    background-color: #000000A0;
+    padding: 10px 15px;
+    margin: 0;
+    color: white;
+    text-align: center;
+}
+
+.productCard img {
+    width: 100%;
+    height: 70%;
+}
+
+.orderContainer {
+    height: 20%;
+    font-size: 12pt;
+    text-align: center;
+    background-color: lime;
+}
+
+.orderContainer button {
+    width: 100%;
+    height: 50%;
+    background-color: yellow;
+    border: none;
+}
+
+.productList {
+    margin: 10px;
+    background-color: gray;
+    border-style: solid;
+    border-width: 2px;
+    border-color: green;
+    display: flex;
+}
+
+.productsHeader {
+    margin-left: 10px;
+}
