Added login page

--- a/Project/style.css
+++ b/Project/style.css
@@ -97,3 +97,26 @@ nav {
 .userInfo a {
     color: black;
 }
+
+.form_login_row {
+    width: 250px;
+    height: max-content;
+    margin: auto;
+    padding: 10px;
+    background-color: cornsilk;
+    text-align: center;
+}
+
+.form_login_row .btnSubmit {
+    background-color: greenyellow;
+    border-radius: 5px;
+}
+
+.login_info {
+    width: 250px;
+    height: max-content;
+    margin: auto;
+    padding: 10px;
+    background-color: cornsilk;
+    text-align: center;
+}
