--- a/Project/style.css
+++ b/Project/style.css
@@ -120,3 +120,40 @@ nav {
     background-color: cornsilk;
     text-align: center;
 }
+
+.product {
+    background-color: #FAFAFAAB;
+    border: 2px solid lime;
+    border-radius: 25px;
+    width: 50%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    position: relative;
+    left: 25%; 
+    right: 25%;
+    margin: 12px 0px;
+    overflow: visible;
+}
+
+.product h3 {
+    text-align: center;
+}
+
+.product button {
+    font-size: 24px;
+    position: relative;
+    left: 25%;
+    width: 50%;
+    border-radius: 24px;
+    margin-bottom: 5px;
+}
+
+#addToFavorite {
+    margin: 5px;
+    font-size: 200%;
+    float: right;
+}
+#backToBrowse {
+    margin: 5px;
+    font-size: 200%;
+    float: left;
+}
