--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -1,15 +1,21 @@
 body {
     background-color: gray;
+    margin: 0px;
 }
 #page {
     background-color: rgba(255, 255, 255, 0.5);
 }
 header {
-    background-color: lightgrey;
-    height: 120px;
+    position: relative;
+    margin: 0px;
+    background: rgb(2,0,36);
+    background: linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    height: 200px;
 }
 nav {
-    background-image: linear-gradient(to right, yellow, green);
+    margin-top: 1px;
+    background: rgb(8,30,218);
+    background: linear-gradient(84deg, rgba(8,30,218,1) 0%, rgba(189,189,189,1) 100%);
     height: 40px;
     text-align: center;
     overflow: hidden;
@@ -86,6 +92,8 @@ nav {
     position: relative;
     height: max-content;
     margin: 5px;
+    margin-top: 10px;
+    margin-right: 15px;
 }
 .userInfo a {
     color: black;
