--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -12,6 +12,12 @@ header {
     background: linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     height: 200px;
 }
+footer{
+    position: relative;
+    background-color: rgba(33, 20, 70, 0.808);
+    color: whitesmoke;
+    margin-top: 445px;
+}
 nav {
     margin-top: 1px;
     background: rgb(8,30,218);
