Fix Add to cart button in show panel

--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -181,6 +181,11 @@ nav {
     margin: 12px 0px;
     overflow: visible;
 }
+.product button a {
+    display: block;
+    width: auto;
+    height: auto;
+}
 
 .product img {
     width: 196px;
