--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -5,11 +5,11 @@ body {
 #page {
     background-color: rgba(255, 255, 255, 0.5);
 }
-header {
+header{
+    background-image: url('../frontend/pictures/header_background.jpg');
     position: relative;
     margin: 0px;
-    background: rgb(2,0,36);
-    background: linear-gradient(356deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    z-index:0;
     height: 200px;
 }
 footer{
@@ -20,11 +20,14 @@ footer{
 }
 nav {
     margin-top: 1px;
-    background: rgb(8,30,218);
-    background: linear-gradient(84deg, rgba(8,30,218,1) 0%, rgba(189,189,189,1) 100%);
+    background: transparent;
+    /*background: linear-gradient(84deg, rgba(8,30,218,1) 0%, rgba(189,189,189,1) 100%);*/
     height: 40px;
     text-align: center;
     overflow: hidden;
+    position: relative;
+    bottom: 60px;
+
 }
 .navbutton {
     background-color: transparent;
