--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -1,47 +1,58 @@
 body {
-    background-color: gray;
+    background-color: rgb(255, 255, 255);
     margin: 0px;
+    position: fixed;
+    height: 100%;
+    width:  100%;
 }
+.home{  
+    position: fixed;
+    width: 100%;
+    height: 100%;  
+}
+/*
 #page {
     background-color: rgba(255, 255, 255, 0.5);
 }
+*/
 header{
     background-image: url('../frontend/pictures/header_background.jpg');
     position: relative;
     margin: 0px;
     z-index:0;
-    height: 200px;
+    height: 300px;
 }
 footer{
-    position: relative;
     background-color: rgba(33, 20, 70, 0.808);
     color: whitesmoke;
-    margin-top: 445px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 nav {
     margin-top: 1px;
-    background: transparent;
+    background:transparent;
     /*background: linear-gradient(84deg, rgba(8,30,218,1) 0%, rgba(189,189,189,1) 100%);*/
-    height: 40px;
+    min-height: auto;
     text-align: center;
     overflow: hidden;
     position: relative;
-    bottom: 60px;
-
+    bottom: 70px;
 }
 .navbutton {
-    background-color: transparent;
-    border-radius: 8px;
+    background-color:transparent;
+    border-radius: 8px;   
     display: inline-block;
     vertical-align: middle;
     height: 38px;
     line-height: 38px;
 }
 .navbutton:hover{
-    background-color:rgb(8,30,218);
+    background-color: rgba(65, 75, 80, 0.123);
 }
 .navbutton a:hover{
-    color:wheat;
+    color: rgb(1, 9, 14);
 }
 .navbutton a {
     text-decoration: none;
@@ -49,7 +60,13 @@ nav {
     color: rgb(20, 2, 2);
 }
 .active {
-    background-color: rgba(6, 45, 117, 0.589);
+    border-radius: 50px;  
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    background-color: rgba(233, 233, 233, 0.1);
+   
 }
 
 .productCard {
