--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -1,20 +1,22 @@
+html{
+    overflow-y: scroll;
+}
 body {
     background-color: rgb(255, 255, 255);
     margin: 0px;
-    position: fixed;
+    /*
+    position: fixed;   
     height: 100%;
     width:  100%;
+    */
 }
 .home{  
-    position: fixed;
+
     width: 100%;
     height: 100%;  
 }
-/*
-#page {
-    background-color: rgba(255, 255, 255, 0.5);
-}
-*/
+
+
 header{
     background-image: url('../frontend/pictures/header_background.jpg');
     position: relative;
@@ -23,7 +25,8 @@ header{
     height: 300px;
 }
 footer{
-    background-color: rgba(33, 20, 70, 0.808);
+    margin-top:10px;
+    background-color: rgba(80, 79, 82, 0.808);
     color: whitesmoke;
     position: fixed;
     bottom: 0;
