--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -4,7 +4,7 @@ html{
 body {
     background-color: rgb(255, 255, 255);
     margin: 0px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     /*
     position: fixed;   
     height: 100%;
@@ -14,6 +14,10 @@ body {
 .home{  
     width: 100%;
     height: 100%;  
+}
+.home div{
+    width: 50%;
+    margin: auto;
 }
 .regContainer{
     box-sizing: border-box;
@@ -49,12 +53,13 @@ body {
 }
 
 header{
-    background-image: url('../frontend/pictures/header_background.jpg');
+    background-image: url('../frontend/pictures/header_background.png');
     background-size: cover;
     position: relative;
     margin: 0px;
     z-index:0;
     height: 300px;
+    border-bottom: 1px solid black;
 }
 footer{
     margin-top:10px;
@@ -93,6 +98,7 @@ nav {
     text-decoration: none;
     padding: 70px;
     color: rgb(20, 2, 2);
+    text-shadow: 1px 1px white;
 }
 .active {
     border-radius: 50px;  
@@ -147,7 +153,8 @@ nav {
     border-style: solid;
     border-width: 2px;
     border-color: green;
-    display: flex;
+    display: inline-block;
+    overflow-x: auto;
 }
 
 .productsHeader {
