--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -102,10 +102,10 @@ nav {
 }
 .active {
     border-radius: 50px;  
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    border-right: 1px solid white;
+    border-left: 1px solid white;
     background-color: rgba(233, 233, 233, 0.1);
    
 }
@@ -118,17 +118,23 @@ nav {
     border: 1px solid black;
     border-radius: 5px;
     margin: 10px 15px;
+    float: left;
 }
 
 .productCard h4 {
-    background-color: #000000A0;
+    background-color: #194e4e;
     padding: 10px 15px;
     margin: 0;
     color: white;
     text-align: center;
+    text-shadow: 1px 1px black;
+}
+.productList div a{
+    text-decoration: none;
 }
 
 .productCard img {
+    height: auto;
     width: 100%;
     height: 70%;
 }
@@ -148,17 +154,17 @@ nav {
 }
 
 .productList {
-    margin: 10px;
-    background-color: gray;
-    border-style: solid;
-    border-width: 2px;
-    border-color: green;
-    display: inline-block;
-    overflow-x: auto;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    margin: auto;
 }
+
 
 .productsHeader {
     margin-left: 10px;
+    justify-content: center;
+    text-align: center;
 }
 
 .userInfo {
@@ -291,6 +297,7 @@ height: 100px;
     font-style: oblique;
     font-weight: bold;
     color: black;
+    cursor: pointer;
 }
 #addToCart:hover{
     background-color: brown;
