--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -1,5 +1,6 @@
 html{
     overflow-y: scroll;
+    font-family: Avant Garde,Avantgarde,Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
 }
 body {
     background-color: rgb(255, 255, 255);
@@ -16,7 +17,7 @@ body {
     height: 100%;  
 }
 .home div{
-    width: 50%;
+    width: 70%;
     margin: auto;
 }
 .regContainer{
