--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -81,6 +81,7 @@ nav {
     overflow: hidden;
     position: relative;
     bottom: 70px;
+    float: right;
 }
 .navbutton {
     background-color:transparent;
@@ -88,7 +89,10 @@ nav {
     display: inline-block;
     vertical-align: middle;
     height: 38px;
+    width: 138px;
     line-height: 38px;
+    margin-right: 15px;
+
 }
 .navbutton:hover{
     background-color: rgba(65, 75, 80, 0.123);
@@ -98,7 +102,6 @@ nav {
 }
 .navbutton a {
     text-decoration: none;
-    padding: 70px;
     color: rgb(20, 2, 2);
     text-shadow: 1px 1px 2px white;
 }
@@ -109,6 +112,8 @@ nav {
     border-right: 1px solid white;
     border-left: 1px solid white;
     background-color: rgba(233, 233, 233, 0.1);
+    height: 38px;
+    font-size: 18px;
    
 }
 
@@ -158,6 +163,7 @@ nav {
     text-align: center;
     width: 80%;
     margin: auto;
+    margin-top: 4%;
 }
 
 .userInfo {
@@ -221,8 +227,12 @@ nav {
 .btnDelete {
     background-color: red;
     border-radius: 5px;
+    padding: 5px;
     text-decoration: none;
     color: black;
+}
+.btnDelete:hover{
+    background-color:rgb(182, 0, 0);
 }
 
 .user_panel .logout_button a {
@@ -368,12 +378,15 @@ height: 100px;
 
 .cart-remove-button {
     text-decoration: none;
-    color: red;
+    color: rgb(0, 0, 0);
     padding: 7px;
     border: 1px solid red;
     font-size: 15pt;
     border-radius: 5px;
-    background-color: rgba(124, 0, 0);
+    background-color: rgb(105, 19, 19);
+}
+.cart-remove-button:hover{
+    background-color: rgb(182, 0, 0);
 }
 
 .cart-quantity-button {
