--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -19,6 +19,23 @@ body {
 .home div{
     width: 70%;
     margin: auto;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 50px;
+    background-color: rgba(15, 15, 15, 0.603);
+    text-shadow: 1px 1px black;
+    color: white;
+    margin-top: 2%;
+}
+.home div a{
+    text-decoration: none;
+    color: lightblue;
+    font-weight: bold;
+}
+.home div a:hover{
+    color:rgb(39, 39, 122);
 }
 .regContainer{
     box-sizing: border-box;
@@ -313,6 +330,9 @@ nav {
 position: relative;
 width: 150px;
 height: 100px;
+}
+.nomads_logo:hover{
+opacity: 0.75;
 }
 #addToCart{
     font-weight: bold;
