Updated the Style.css with the bugreport elements

--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -103,6 +103,39 @@ body {
     opacity: 1;
 }
 
+.reportContainer{
+    box-sizing: border-box;
+    padding: 16px;
+    width: 40%;
+    justify-content: center;
+    margin: auto;   
+}
+.reportElements{
+    width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+.reportElements:hover{
+    background-color: #ddd;
+  outline: none;
+}
+.reportButton {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+}
+.reportButton:hover{
+    opacity: 1;
+}
+
 
 header{
     background-image: url('../frontend/pictures/header_background.png');
