--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -232,8 +232,11 @@ nav {
 
 .orderContainer {
     height: 20%;
+    width: 100%;
     font-size: 12pt;
     text-align: center;
+    position: absolute;
+    bottom: -4%;
 }
 
 .orderContainer button {
