Changes the button colors to match the theme of the webpage

--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -57,7 +57,7 @@ body {
   outline: none;
 }
 .regButton {
-    background-color: #4CAF50;
+    background-color: #35a4ac;
     color: white;
     padding: 16px 20px;
     margin: 8px 0;
