--- a/Project/frontend/style.css
+++ b/Project/frontend/style.css
@@ -656,4 +656,22 @@ opacity: 0.75;
     outline: none;
 }
 
+.image-container {
+    width: 20%;
+    height: 50%;
+    border: 1px solid black;
+    border-radius: 5px;
+    position: absolute;
+    margin: 20px;
+    left: 7%;
+    padding: 5px;
+}
+.image-container #preview {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 25%;
+    bottom: 25%;
+}
+
 
